Scribus - 1.4.0.rc6
- 0010204: [Translation] Update of Slovak translation (cbradney) - resolved.
- 0010251: [Story Editor / Text Frames] [PATCH] wrong text formatting issues (jghali) - resolved.
- 0009436: [Story Editor / Text Frames] wrong text formating - text extend margins or columns (jghali) - resolved.
- 0010174: [General] the return of the brownish color (jghali) - resolved.
- 0005891: [Story Editor / Text Frames] Various settings of work tracking and glyph extension make text overlap in column gap (jghali) - resolved.
- 0009932: [Story Editor / Text Frames] First text line does not flow around objects (jghali) - resolved.
- 0010298: [Translation] update of Czech translation for Scribus 1.4.0 (cbradney) - closed.
- 0009519: [Documentation] Required documentation updates for 1.4 (christoph_s) - closed.
- 0010252: [General] Status bar displays X and Y positions in points even when picas are the document unit (cbradney) - closed.
- 0010276: [Undo/Redo] Undo/Redo with imagescaling breaks screen-rendering (jghali) - closed.
- 0010284: [Translation] Hungarian translation update for 1.4 (rc6) (jghali) - closed.
- 0010263: [User Interface] [patch] Better Masterpage Import (cbradney) - closed.
- 0010144: [Shape Drawing] Shapes are sometimes cutfed off after grouping (fschmid) - closed.
- 0010163: [Story Editor / Text Frames] put the story editor's icons on three lines (jghali) - closed.
- 0010173: [Story Editor / Text Frames] Crash on search/replace with text alignment change (jghali) - closed.
- 0010189: [Language Tools] missing Slovak (sk_SK) definition in langmg.cpp (cbradney) - closed.
- 0010190: [User Interface] Add options for transfering page origin to Top Center and Bottom Center positions (cbradney) - closed.
- 0010172: [Usability] Duplicated line's outline not drawn while moving (jghali) - closed.
- 0010208: [Scripter] createParagraphStyle linespacing parameter don't accept floats (jghali) - closed.